--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,16 @@
 {% if page.secondary-column-content %}{% assign secondary-column-content = {{ page.secondary-column-content }} %}{% else %}{% assign secondary-column-content = 'secondary-column.html' %}{% endif %}
 {% if page.tertiary-column %}{% if page.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% else %}{% if site.data.setup.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% endif %}
 {% if page.tertiary-column-content %}{% assign tertiary-column-content = page.tertiary-column-content %}{% else %}{% assign tertiary-column-content = 'tertiary-column.html' %}{% endif %}
+{% if page.navbanner-position %}{% assign navbanner-position = page.navbanner-position %}{% else %}{% assign navbanner-position = site.data.setup.navbanner-position %}{% endif %}
 <html>
 
 	{% include head.html %}
 	
   	<body class="body-panel">
   	
+  		{% if navbanner-position == 'top' %}
   		<div class="navbanner-panel">{% include navbanner.html %}</div>
+  		{% endif %}
 
 		<div class="column-panel">
 
@@ -32,6 +35,9 @@
 
 
 			<div class="primary-column">
+			  	{% if navbanner-position == 'main' %}
+  				<div class="navbanner-panel">{% include navbanner.html %}</div>
+  				{% endif %}
 				<main>{{ content }}</main>
 			</div>
 			
