Fixed screwup in 1.8.1

--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -31,7 +31,7 @@
 		<li>
 			<div class="menu-item">
 				<div class="menu-item-symbol"></div>
-				<div class="menu-item-title"><a href="{{ site.baseurl }}{{ site.baseurl }}"><p>{{ home }}</p></a></div>
+				<div class="menu-item-title"><a href="{{ site.url }}{{ site.baseurl }}"><p>{{ home }}</p></a></div>
 			</div>
 		</li>
 		
