--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
+  <!-- Include JQuery from google -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
   <!-- Include google analytics for production build and if necessary -->
   {% if jekyll.environment == 'production' and site.google_analytics %}
 	{% include google-analytics.html %}
