--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,9 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
   <!-- Include JQuery from google -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% if site.data.setup.useSeparateNavBanner %}
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% endif %}
   
   <!-- Include google analytics for production build and if necessary -->
   {% if jekyll.environment == 'production' and site.google_analytics %}
