Fixed problems with the icon and the h-scrollbar

--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -1,6 +1,6 @@
 <!-- Title of the site is always visible -->
 <div class="navbanner-title">
-	<div class="banner-icon"></div>
+	<div class="banner-icon-container"><div class="banner-icon"></div></div>
 	<p class="site-title-text">{{ site.title }}</p>
 </div>
 
