--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
   <!-- Include JQuery from google -->
-  {% if site.data.setup.useSeparateNavBanner %}
+  {% if site.data.setup.use-separate-navbanner %}
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% endif %}
   
