--- a/_sass/classic/_widget-support.scss
+++ b/_sass/classic/_widget-support.scss
@@ -20,3 +20,23 @@
 		height: 100%;
 	}
 }
+
+// Used by the older-posts widget
+.older-posts {
+	h1 {
+		margin-bottom: $vspacing-unit/2;
+	}
+	.year-details {
+		summary {
+			outline: none; // Prevent blue input-active activity border
+		}
+		.month-details {
+			padding-left: $hspacing-unit;
+			p {
+				padding: 0 0 0 (2 * $hspacing-unit);
+				margin: 0 0 0 0;
+				text-indent: -$hspacing-unit;
+			}
+		}
+	}
+}
