Bugfix for number of posts on home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,13 @@ layout: default
 
 <div>
 
-	{% assign posts = 'Posts' %}
-	{% if site.data.text-for.tPosts %}{% assign posts = site.data.text-for.tPosts %}{% endif %}
-	<h1>{{ posts }}</h1>
+	{% assign posts-text = 'Posts' %}
+	{% if site.data.text-for.tPosts %}{% assign posts-text = site.data.text-for.tPosts %}{% endif %}
+	<h1>{{ posts-text }}</h1>
 	
 <!--	{{ content }} -->
 
-	{% for post in site.posts %}
-	{% if forloop.index > site.data.setup.number_of_posts_on_home_page %} {% break %} {% endif %}
+	{% for post in site.posts limit: site.data.setup.number-of-posts-on-home-page %}
 
     <h2><a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
     <span class="post-meta">{{ post.date | date: "%F" }}</span>
